# egs-api-rs

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.githooks/: pre-commit
.github/workflows/: rust.yml
examples/: account.rs  assets.rs  auth.rs  catalog.rs  client_credentials.rs  cloud_saves.rs  commerce.rs  common.rs  compare_manifests.rs  cosmos.rs  entitlements.rs  fab.rs  game_token.rs  gui.glade  gui.rs  library.rs  presence.rs  status.rs  uplay.rs  workflow.rs
src/: lib.rs
src/api/: account.rs  binary_rw.rs  cloud_save.rs  commerce.rs  cosmos.rs  egs.rs  error.rs  fab.rs  login.rs  mod.rs  presence.rs  status.rs  store.rs  types.rs  utils.rs
src/api/types/: account.rs  artifact_service.rs  asset_info.rs  asset_manifest.rs  billing_account.rs  catalog_item.rs  catalog_offer.rs  chunk.rs  cloud_save.rs  cosmos.rs  currency.rs  download_manifest.rs  engine_blob.rs  entitlement.rs  epic_asset.rs  exchange_code.rs  fab_asset_manifest.rs  fab_entitlement.rs  fab_library.rs  fab_search.rs  fab_taxonomy.rs  friends.rs  library.rs  mod.rs  presence.rs  price.rs  quick_purchase.rs  service_status.rs  uplay.rs
src/facade/: account.rs  assets.rs  auth.rs  cosmos.rs  fab.rs  misc.rs  mod.rs  store.rs
thoughts/ledgers/: CONTINUITY_ses_3a18.md  CONTINUITY_ses_3a1b.md  CONTINUITY_ses_3a22.md
thoughts/shared/designs/: 2026-02-14-api-quality-improvements-design.md
thoughts/shared/plans/: 2026-02-14-api-quality-improvements.md
