[package]
name = "egs-api"
version = "0.4.2"
authors = ["Milan Šťastný <milan@acheta.games>"]
description = "Interface to the Epic Games API"
categories = ["asynchronous"]
keywords = ["EpicGames", "Epic", "egs"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/AchetaGames/egs-api-rs"
documentation = "https://docs.rs/egs-api/latest/egs_api/"
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies", "blocking"] }
serde_json = "1.0"
url = { version = "2.2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
sha-1 = "0.10"
flate2 = "1.0.20"
num = "0.4.0"
reqwest_cookie_store = "0.3.0"
cookie_store = "0.16"

[dependencies.tokio]
version = "1.10"
features = ["macros"]

[dependencies.serde]
version = "1.0.123"
features = ["derive"]

[dev-dependencies]
webbrowser = "0.7"