[package]
name = "egs-api"
version = "0.7.1"
authors = ["Milan Šťastný <milan@acheta.games>"]
description = "Interface to the Epic Games API"
categories = ["asynchronous"]
keywords = ["EpicGames", "Epic", "egs"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/AchetaGames/egs-api-rs"
documentation = "https://docs.rs/egs-api/latest/egs_api/"
edition = "2018"

[dependencies]
reqwest = { version = "0.12", features = ["json", "cookies", "blocking"] }
serde_json = "1.0"
serde_with = "3"
url = { version = "2.5", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
sha-1 = "0.10"
flate2 = "1"
num = "0.4"
reqwest_cookie_store = "0.8.0"
cookie_store = "0.21.0"
uuid = { version = "1", features = ["v4", "serde"] }

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dev-dependencies]
webbrowser = "1"
env_logger = "0.11"
